Refactoring ACTION GET_SNAPSHOT_CONTENT in rest resource GetSnapshotContentResource